# Ytest

./: .gitignore  CMakeLists.static.txt  CMakeLists.txt  LICENSE.txt  YtestMain.hpp  install.sh
Examples/: CMakeLists.txt
Examples/AssertMacros/: AssertMacroTest.cpp  CMakeLists.txt  CriticalErrorTest.cpp  FatalErrorTest.cpp  WarningsTest.cpp  main.cpp
Setup/: Visual Studio 14 2015 Win64.bat
Ystring/: CMakeLists.txt  PlatformDetails.hpp  YstringDefinitions.hpp
Ystring/Encoded/: DecoderStringFunctions-impl.hpp  DecoderStringFunctions.hpp
Ystring/Generic/: GenericString-impl.hpp  GenericString.hpp  StringReference.hpp
Ystring/Unicode/: CaseConverter.cpp  CaseConverter.hpp
Ystring/Utf16/: DecodeUtf16.hpp
Ystring/Utf32/: DecodeUtf32-impl.hpp
Ystring/Utf8/: Utf8String.cpp  Utf8String.hpp
Ytest/: AutoTest.cpp  AutoTest.hpp  Comparers.hpp  Exceptions.hpp  Formatters.hpp  JUnitReport.cpp  MacroUtilities.cpp  Macros.hpp  Session.cpp  XmlWriter.cpp  Ytest.hpp  helptext.txt
examples/: CMakeLists.txt
examples/AssertMacros/: AssertMacroTest.cpp  CMakeLists.txt  CriticalErrorTest.cpp  FatalErrorTest.cpp  WarningsTest.cpp
extras/Visual Studio Setup/: Visual Studio 14 2015 Win64.bat
include/Ytest/: AutoTest.hpp  AutoTestRunner.hpp  Comparers.hpp  Error.hpp  Exceptions.hpp  Formatters.hpp  MacroUtilities.hpp  Macros.hpp  Session.hpp  TestScope.hpp  Ytest.hpp  YtestMain.hpp
src/Ystring/: CMakeLists.txt
src/Ytest/: AutoTest.cpp  AutoTestRunner.cpp  Error.cpp  Formatters.cpp  Indentation.cpp  Indentation.hpp  JUnitReport.cpp  JUnitReport.hpp  MacroUtilities.cpp  PathFilter.cpp  PathFilter.hpp  Session.cpp  StreamRedirection.cpp  StreamRedirection.hpp  Test.cpp  Test.hpp  TextReport.cpp  TextReport.hpp  VisualStudioReport.cpp  VisualStudioReport.hpp  XmlWriter.cpp  XmlWriter.hpp  Ytest.hpp  helptext.sh
src/Ytest/Argos/: Argos.cpp  Argos.hpp
